full-moon/tests/cases/fail/parser/if-5/source.lua
if x then
	call1()
else
	call2()
elseif y then
	call3()
end